--- a/.travis.yml
+++ b/.travis.yml
@@ -27,28 +27,25 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo ls -la /home/travis
-        - sudo chmod a+rwx /home/
+
+       sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod -R a+rwx /home/travis/.travis*
-        - sudo chmod -R a+rwx /home/travis/{.profile,.bash*,.config}
+        - sudo chmod a+rwx /home/travis/.bash_profile
+        - sudo chmod a+rwx -R /home/travis/.bash_profile.d
+        - sudo chmod a+rwx /home/travis/.bashrc
         - sudo chmod a+rwx /home/travis/.gitconfig
         - sudo chmod a+rwx /home/travis/.my.cnf
-        - sudo chmod a+rwx /home/travis/.travis_ci_environment.yml
-        - sudo chmod a+rwx /home/travis/.bash_profile
-        - sudo chmod a+rwx /home/travis/.bashrc
         - sudo chmod a+rwx /home/travis/.profile
         - sudo chmod a+rwx /home/travis/build.sh
-        - sudo chmod a+rwx /home/travis/.travis_packer_templates_rspec.json
         - sudo chmod a+rwx -R /home/travis/.cache
         - sudo chmod a+rwx -R /home/travis/.local
         - sudo chmod a+rwx -R /home/travis/bin
         - sudo chmod a+rwx -R /home/travis/builds
-        - sudo chmod a+rwx -R /home/travis/.bash_profile.d
         - sudo chmod a+rwx -R /home/travis/bats
         - sudo chmod a+rwx -R /home/travis/build
         - sudo chmod a+rwx -R /home/travis/.config
         - sudo chmod a+rwx -R /home/travis/virtualenv
-        - sudo chmod a+rwx -R /home/travis/.bash_logout
         - sudo ls -la /home/travis
       script:
         - bats ./test/test_deployment.sh
