--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo ls -la /home/travis
-
-       sudo chmod a+rwx /home/
+        - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod -R a+rwx /home/travis/.travis*
         - sudo chmod a+rwx /home/travis/.bash_profile
