--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,10 @@ jobs:
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod -R a+rwx /home/travis/.travis*
-        - sudo chmod -R a+rwx /home/travis/{.profile,.bash*,.config}
+        - sudo chmod -R a+rwx /home/travis/{.profile,.config}
         - sudo chmod a+rwx /home/travis/.gitconfig
         - sudo chmod a+rwx /home/travis/.my.cnf
         - sudo chmod a+rwx /home/travis/.travis_ci_environment.yml
-        - sudo chmod a+rwx /home/travis/.bash_profile
-        - sudo chmod a+rwx /home/travis/.bashrc
         - sudo chmod a+rwx /home/travis/.profile
         - sudo chmod a+rwx /home/travis/build.sh
         - sudo chmod a+rwx /home/travis/.travis_packer_templates_rspec.json
@@ -45,7 +43,6 @@ jobs:
         - sudo chmod a+rwx -R /home/travis/.rvm
         - sudo chmod a+rwx -R /home/travis/bin
         - sudo chmod a+rwx -R /home/travis/builds
-        - sudo chmod a+rwx -R /home/travis/.bash_profile.d
         - sudo chmod a+rwx -R /home/travis/.travis
         - sudo chmod a+rwx -R /home/travis/gopath
         - sudo chmod a+rwx -R /home/travis/perl5
@@ -53,7 +50,6 @@ jobs:
         - sudo chmod a+rwx -R /home/travis/build
         - sudo chmod a+rwx -R /home/travis/.config
         - sudo chmod a+rwx -R /home/travis/virtualenv
-        - sudo chmod a+rwx -R /home/travis/.bash_logout
         - sudo ls -la /home/travis
       script:
         - bats ./test/test_deployment.sh
