--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ jobs:
       before_script:
         - sudo chmod a+rwx -R /home/travis/.rvm
         - echo "MONKEY!"
+        - sudo chmod -R a+rwx /home/travis/{.profile,.config}
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
