--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo chmod a+rwx -R /home/travis/.rvm
+        - sudo chmod a+rwx -R /home/travis/virtualenv
         - echo "MONKEY!"
-        - sudo chmod -R a+rwx /home/travis/{.profile,.config}
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
