--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
         - sudo chmod a+rwx -R /home/travis/.rvm
         - sudo chmod a+rwx -R /home/travis/virtualenv
         - echo "MONKEY!"
+        - sudo chmod -R a+rwx /home/travis/.config
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
