--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,12 @@ jobs:
         - ./test/requirements_linux.sh
       before_script:
         - sudo ls -la /home/travis
-        - sudo chmod o+rwx -R /home/travis/.rvm
-        - sudo chmod o+rwx -R /home/travis/virtualenv
-        - sudo chmod o+rwx -R /home/travis/.config
-        - sudo chmod o+rwx /home/
-        - sudo chmod o+rwx /home/travis
-        - sudo chmod o+rwx -R /home/travis/build
+        - sudo chmod a+rwx -R /home/travis/.rvm
+        - sudo chmod a+rwx -R /home/travis/virtualenv
+        - sudo chmod a+rwx -R /home/travis/.config
+        - sudo chmod a+rwx /home/
+        - sudo chmod a+rwx /home/travis
+        - sudo chmod a+rwx -R /home/travis/build
         - echo "MONKEY!"
       script:
         - bats ./test/test_deployment.sh
