--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ jobs:
         - sudo ls -la /home/travis
         - sudo chmod a+rwx -R /home/travis/.rvm
         - sudo chmod a+rwx -R /home/travis/virtualenv
-        - sudo chmod a+rwx -R /home/travis/.config
+        - sudo chmod -R a+rwx /home/travis/.config
+        - echo "MONKEY!"
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
-        - echo "MONKEY!"
       script:
         - bats ./test/test_deployment.sh
         - sudo systemctl -l status aroundtheclock.service
