--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ jobs:
       before_script:
         - sudo ls -la /home/travis
         - sudo chmod a+rwx -R /home/travis/.rvm
-        - sudo chmod a+rwx -R /home/travis/virtualenv
         - sudo chmod -R a+rwx /home/travis/.config
-        - echo "MONKEY!"
+        - sudo chmod a+rwx -R /home/travis/virtualenv
+        - echo "MONKEY!!"
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
