--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ jobs:
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
+        - sudo chmod a+rwx -R /home/travis
         - sudo ls -la /home/travis
       script:
         - bats ./test/test_deployment.sh
