--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ jobs:
       os: "linux"
       before_install:
         - sudo apt-get update
+        - namei -mo /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
+        - sudo ls -la /home/travis
         - sudo chmod a+rwx /home/
         - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build
