--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ jobs:
       before_install:
         - sudo apt-get update
         - namei -mo /home/travis/build/OthmanEmpire/project_aroundtheclock/bin
-#        - sudo chmod a+rwx /home/
-#        - sudo chmod a+rwx /home/travis
+        - sudo chmod a+rwx /home/
+        - sudo chmod a+rwx /home/travis
         - sudo chmod a+rwx -R /home/travis/build/OthmanEmpire
       install:
         - sudo ./bin/install.sh
