--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ jobs:
         - sudo ./bin/install.sh
         - ./test/requirements_linux.sh
       script:
-        - bats ./test/test_deployment.sh
+        - ls -al /lib/systemd/system
+        - sudo bats ./test/test_deployment.sh
 
 ### EXTRA CONFIGURATION
 
