--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,39 @@
+dist: "bionic"
 language: python
 
+### JOBS THAT ARE ASSIGNED TO DEFAULT 'TEST' STAGE.
+
 python:
-    - "3.6"
-    - "3.7"
+  - "3.6"
+  - "3.7"
 
 install:
-    - pip install -r requirements.txt
-    - pip install pytest pytest-cov codecov
+  - pip install -r requirements_python.txt
+  - pip install -r test/requirements/requirements_python.txt
+script: pytest --cov=test/
+after_success: codecov
 
-script:
-    - pytest --cov=./
+### JOBS THAT ARE ASSIGNED TO 'Deploy' STAGE.
 
-after_success: 
-    - codecov
+jobs:
+  include:
+    - stage: "Deploy"
+      python: "3.7"
+      os: "linux"
+      before_install:
+        - sudo apt-get update
+        - sudo chmod o+rx /home/travis
+        - sudo chmod o+rwx -R /home/travis/build/OthmanEmpire
+      install:
+        - sudo ./bin/install.sh
+        - ./test/requirements/requirements_linux.sh
+      script:
+        - bats ./test/test_deployment.sh
+
+### EXTRA CONFIGURATION
+
+notifications:
+  email:
+    recipients: oz.alikhan@gmail.com
+    on_success: always
+    on_failure: always
