--- a/config/aroundtheclock.service
+++ b/config/aroundtheclock.service
@@ -3,10 +3,10 @@ Description=Project_AroundTheClock
 After=multi-user.target
 
 [Service]
-ExecStart=<PATH_TO_PROJECT_ROOT>/run.sh
-WorkingDirectory=<PATH_TO_PROJECT_ROOT>
-Type=idle
+Type=simple
 User=aroundtheclock
+ExecStart=<PATH_TO_PROJECT_ROOT>/bin/run.sh
+WorkingDirectory=<PATH_TO_PROJECT_ROOT>
 Restart=always
 RestartSec=3
 
