Updated .travis.yml to build only for master/develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,8 @@ notifications:
     recipients: oz.alikhan@gmail.com
     on_success: always
     on_failure: always
+
+branches:
+  only:
+    - master
+    - develop
